--- a/app/src/main/res/layout/verify_phone.xml
+++ b/app/src/main/res/layout/verify_phone.xml
@@ -36,6 +36,7 @@
         android:text="@string/verifyCode"
         android:layout_marginTop="10dp"
         android:layout_gravity="center"
+        style="@style/mainButton"
         />
 
     <Button
@@ -45,6 +46,7 @@
         android:text="@string/resendCode"
         android:layout_marginTop="10dp"
         android:layout_gravity="center"
+
         />
 
     <TextView
