--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,6 +19,21 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <!-- Style for logIn pages -->
+    <style name="LogInPages">
+        <item name="android:background">@drawable/bg</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+    <!-- Style for main buttons -->
+    <style name="mainButton">
+        <item name="android:width">250dp</item>
+        <item name="android:background">@drawable/main_button_background</item>
+        <item name="android:textColor">@color/white</item>
+
+    </style>
+
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
