--- a/app/src/main/res/layout/verify_phone.xml
+++ b/app/src/main/res/layout/verify_phone.xml
@@ -20,43 +20,39 @@
         android:id="@+id/codeVerifyInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
         android:backgroundTint="@color/lightText"
         android:ems="10"
-        android:layout_marginTop="10dp"
         android:hint="@string/enterCode"
         android:inputType="number"
         android:textColor="@color/white"
-        android:textColorHint="@color/lightText"
-        android:layout_gravity="center"/>
+        android:textColorHint="@color/lightText" />
 
     <Button
         android:id="@+id/verifyVerifyBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/verifyCode"
-        android:layout_marginTop="10dp"
-        android:layout_gravity="center"
         style="@style/mainButton"
-        />
-
-    <Button
-        android:id="@+id/resendVerifyBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/resendCode"
-        android:layout_marginTop="10dp"
         android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:text="@string/verifyCode" />
 
-        />
+    <TextView
+        android:id="@+id/resendVerifyText"
+        style="@style/extraText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="25dp"
+        android:text="@string/resendCode" />
 
     <TextView
         android:id="@+id/changePhoneVerifyText"
+        style="@style/extraText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Именить номер"
-        android:layout_marginTop="100dp"
         android:layout_gravity="center"
-        android:textColor="@color/lightText"
-        />
-
+        android:layout_marginTop="120dp"
+        android:text="Именить номер" />
 </LinearLayout>
