--- a/app/src/main/res/layout/authorization.xml
+++ b/app/src/main/res/layout/authorization.xml
@@ -22,8 +22,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="Введите номер телефона"
-        android:textColor="@color/lightText"
         android:layout_marginTop="10dp"
+        style="@style/extraText"
         android:visibility="invisible"/>
 
     <LinearLayout
