--- a/app/src/main/res/layout/main_screen.xml
+++ b/app/src/main/res/layout/main_screen.xml
@@ -24,14 +24,16 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/categoryMainScreenScroll" >
+        app:layout_constraintTop_toBottomOf="@+id/categoryMainScreenScroll"
+        android:layout_marginTop="10dp">
 
         <LinearLayout
             android:id="@+id/resultsMainScreenLayout"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:isScrollContainer="true"
-            android:orientation="vertical" />
+            android:orientation="vertical"
+            />
     </ScrollView>
 
     <LinearLayout
