--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,6 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="categories_width">80dp</dimen>
+    <dimen name="categories_height">35dp</dimen>
 </resources>
