--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,4 @@
 <resources>
-
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Reg pages -->
@@ -30,9 +29,16 @@
         <item name="android:width">250dp</item>
         <item name="android:background">@drawable/main_button_background</item>
         <item name="android:textColor">@color/white</item>
-
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16dp</item>
+        <item name="fontFamily">@font/roboto_bold</item>
     </style>
-
+    <!-- Style for extra text -->
+    <style name="extraText">
+        <item name="android:textColor">@color/lightText</item>
+        <item name="android:textSize">14dp</item>
+        <item name="fontFamily">@font/roboto_bold</item>
+    </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
