--- a/app/src/main/res/layout/bottom_panel.xml
+++ b/app/src/main/res/layout/bottom_panel.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:background="@color/mainColor"
+    android:background="@color/panelColor"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <Button
@@ -29,6 +29,5 @@
         android:layout_weight="1"
         android:layout_margin="20dp"
         android:text="Диалоги" />
-
 
 </LinearLayout>
