--- a/app/src/main/res/layout/registration.xml
+++ b/app/src/main/res/layout/registration.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg"
+    style="@style/LogInPages"
     android:orientation="vertical"
     tools:context=".logIn.Registration">
 
@@ -73,8 +73,6 @@
         android:layout_marginTop="30dp"
         android:text="@string/saveData"
         android:gravity="center"
-        android:textColor="@color/white"
-        android:textStyle="bold"
         style="@style/mainButton"/>
 
 </LinearLayout>
