--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,8 +20,8 @@
 
     <!-- Style for logIn pages -->
     <style name="LogInPages">
-        <item name="android:background">@drawable/bg</item>
         <item name="windowActionBar">false</item>
+        <item name="android:background">@color/logInBackGround</item>
         <item name="windowNoTitle">true</item>
     </style>
     <!-- Style for main buttons -->
@@ -30,15 +30,28 @@
         <item name="android:background">@drawable/main_button_background</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">16dp</item>
+        <item name="android:textSize">16sp</item>
         <item name="fontFamily">@font/roboto_bold</item>
     </style>
     <!-- Style for extra text -->
     <style name="extraText">
         <item name="android:textColor">@color/lightText</item>
-        <item name="android:textSize">14dp</item>
+        <item name="android:textSize">14sp</item>
         <item name="fontFamily">@font/roboto_bold</item>
     </style>
+
+    <style name="ImageRatingBar" parent="@android:style/Widget.RatingBar">
+        <item name="android:progressDrawable">@drawable/ratingbar_selector</item>
+        <item name="android:minHeight">50dp</item>
+        <item name="android:maxHeight">50dp</item>
+    </style>
+
+    <!-- Style for icons -->
+    <style name="textItem">
+        <item name="fontFamily"></item>
+    </style>
+
+
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
