--- a/app/src/main/res/layout/top_panel.xml
+++ b/app/src/main/res/layout/top_panel.xml
@@ -1,50 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/panelColor"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/backTopPanelBtn"
+    <TextView
+        android:id="@+id/backTopPanelText"
+        style="@style/textItemSolid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:layout_margin="20dp"
-        android:text="Назад" />
+        android:layout_weight="1"
+        android:text="@string/back" />
 
     <TextView
         android:id="@+id/titleTopPanelText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_marginTop="20dp"
         android:layout_weight="1"
+        android:gravity="center"
+        style="@style/myTitle"
         android:text="Заголовок" />
 
-    <Button
-        android:id="@+id/multiTopPanelBtn"
+    <ImageView
+        android:id="@+id/logoTopPanelImage"
+        android:layout_width="wrap_content"
+        android:layout_height="70dp"
+        android:layout_weight="1"
+        app:srcCompat="@drawable/bun_beauty"
+        android:visibility="gone"/>
+    <TextView
+        android:id="@+id/settingTopPanelText"
+        style="@style/textItemSolid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:layout_margin="20dp"
-        android:text="Настройки" />
+        android:layout_weight="1"
+        android:gravity="end"
+        android:text="@string/settings" />
 
     <ImageView
         android:id="@+id/avatarTopPanelImage"
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:layout_weight="1"
         android:visibility="gone"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/countOfSubsTopPanelText"
+        android:id="@+id/searchTopPanelText"
+        style="@style/textItemSolid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_margin="5dp"
+        android:layout_margin="20dp"
+        android:text="@string/search"
         android:visibility="gone"
-        android:text="кол-во" />
+        tools:srcCompat="@tools:sample/avatars" />
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/countOfSubsTopPanelText"
+            style="@style/extraText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/subscribeTopPanelText"
+            style="@style/textItemSolid"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:gravity="center"
+            android:text="@string/subscribe_heart"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/unsubscribeTopPanelText"
+            style="@style/textItemRegular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:gravity="center"
+            android:text="@string/subscribe_heart"
+            android:visibility="gone" />
+
+    </LinearLayout>
 </LinearLayout>
