--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,8 @@
 
     <dimen name="categories_width">80dp</dimen>
     <dimen name="categories_height">35dp</dimen>
+
+    <dimen name="photo_width">125dp</dimen>
+    <dimen name="photo_height">125dp</dimen>
+
 </resources>
