--- a/app/src/main/res/layout/registration.xml
+++ b/app/src/main/res/layout/registration.xml
@@ -73,6 +73,6 @@
         android:layout_marginTop="30dp"
         android:text="@string/saveData"
         android:gravity="center"
-        style="@style/mainButton"/>
+        style="@style/mainButtonLogIn"/>
 
 </LinearLayout>
