--- a/app/src/main/res/layout/authorization.xml
+++ b/app/src/main/res/layout/authorization.xml
@@ -53,7 +53,7 @@
         android:id="@+id/verifyAuthBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/mainButton"
+        style="@style/mainButtonLogIn"
         android:text="Войти"
         android:visibility="visible"
         android:layout_marginTop="10dp"
