--- a/app/src/main/res/layout/guest_service.xml
+++ b/app/src/main/res/layout/guest_service.xml
@@ -159,11 +159,10 @@
 
         <Button
             android:id="@+id/editScheduleGuestServiceBtn"
-            style="@style/mainButton"
+            style="@style/mainButtonOther"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center" />
-
     </LinearLayout>
 
     <LinearLayout
@@ -171,5 +170,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"/>
 </android.support.constraint.ConstraintLayout>
