--- a/app/src/main/res/layout/verify_phone.xml
+++ b/app/src/main/res/layout/verify_phone.xml
@@ -31,7 +31,7 @@
 
     <Button
         android:id="@+id/verifyVerifyBtn"
-        style="@style/mainButton"
+        style="@style/mainButtonLogIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
