--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,12 +27,19 @@
     <!-- Style for main buttons -->
     <style name="mainButton">
         <item name="android:width">250dp</item>
-        <item name="android:background">@drawable/main_button_background</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">16sp</item>
         <item name="fontFamily">@font/roboto_bold</item>
         <item name="android:elevation">5dp</item>
+    </style>
+
+    <style name="mainButtonLogIn" parent="mainButton">
+        <item name="android:background">@drawable/main_button_login_background</item>
+    </style>
+
+    <style name="mainButtonOther" parent="mainButton">
+        <item name="android:background">@drawable/main_button</item>
     </style>
     <!-- Style for extra text -->
     <style name="extraText">
