--- a/app/src/main/res/layout/verify_phone.xml
+++ b/app/src/main/res/layout/verify_phone.xml
@@ -53,6 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="120dp"
-        android:text="Именить номер" />
+        android:layout_marginTop="50dp"
+        android:textColor="@color/white"
+        android:text="@string/change_number" />
 </LinearLayout>
