--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,7 @@
     <dimen name="photo_width">125dp</dimen>
     <dimen name="photo_height">125dp</dimen>
 
+    <dimen name="photo_avatar_width">65dp</dimen>
+    <dimen name="photo_avatar_height">65dp</dimen>
+
 </resources>
