--- a/app/src/main/res/layout/add_service.xml
+++ b/app/src/main/res/layout/add_service.xml
@@ -1,88 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".createService.AddService"
-        android:theme="@style/allPages">
-
-    <EditText
-        android:id="@+id/nameAddServiceInput"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:layout_marginBottom="8dp"
-        android:hint="@string/nameAddServiceTB"
-        android:inputType="textPersonName|textCapWords"
-        app:layout_constraintBottom_toTopOf="@+id/costAddServiceInput"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <EditText
-        android:id="@+id/costAddServiceInput"
-        android:layout_width="300dp"
-        android:layout_height="42dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:ems="10"
-        android:hint="@string/costAddServiceTB"
-        android:inputType="number"
-        app:layout_constraintBottom_toTopOf="@+id/categoryAddServiceSpinner"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/headerAddServiceLayout"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <EditText
-        android:id="@+id/addressAddServiceInput"
-        android:layout_width="300dp"
-        android:layout_height="42dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:ems="10"
-        android:hint="Адрес"
-        android:inputType="textPersonName|textCapWords"
-        app:layout_constraintBottom_toTopOf="@+id/nameAddServiceInput"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/headerAddServiceLayout"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <EditText
-        android:id="@+id/descriptionAddServiceInput"
-        android:layout_width="300dp"
-        android:layout_height="99dp"
-        android:layout_gravity="center"
-        android:ems="10"
-        android:inputType="textMultiLine"
-        app:layout_constraintBottom_toTopOf="@+id/addServiceAddServiceBtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.697" />
-
-    <Button
-        android:id="@+id/addServiceAddServiceBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/addServices"
-        app:layout_constraintBottom_toTopOf="@+id/footerAddServiceLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.976"
-        tools:ignore="MissingConstraints" />
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:theme="@style/allPages"
+    tools:context=".createService.AddService">
 
     <LinearLayout
         android:id="@+id/headerAddServiceLayout"
@@ -92,52 +15,124 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/headerAddServiceLayout">
+
+        <LinearLayout
+            style="@style/block"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/block_text">
+
+            <EditText
+                android:id="@+id/nameAddServiceInput"
+                style="@style/mainText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@android:color/transparent"
+                android:hint="@string/nameAddServiceTB"
+                android:inputType="textPersonName|textCapWords" />
+        </LinearLayout>
+
+        <LinearLayout
+            style="@style/block"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/block_text">
+
+            <EditText
+                android:id="@+id/costAddServiceInput"
+                style="@style/mainText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@android:color/transparent"
+                android:hint="@string/costAddServiceTB"
+                android:inputType="number" />
+        </LinearLayout>
+
+        <LinearLayout
+            style="@style/block"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/block_text">
+
+            <EditText
+                android:id="@+id/addressAddServiceInput"
+                style="@style/mainText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@android:color/transparent"
+                android:hint="Адрес"
+                android:inputType="textPersonName|textCapWords" />
+        </LinearLayout>
+
+        <LinearLayout
+            style="@style/block"
+            android:background="@drawable/block_text"
+            android:layout_width="match_parent"
+            android:layout_height="40dp">
+
+            <Spinner
+                style="@style/mainText"
+                android:id="@+id/categoryAddServiceSpinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:entries="@array/category" />
+        </LinearLayout>
+
+        <LinearLayout
+            style="@style/block"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/block_text">
+
+            <EditText
+                style="@style/mainText"
+                android:id="@+id/descriptionAddServiceInput"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:backgroundTint="@android:color/transparent"
+                android:hint="Описание"
+                android:inputType="textMultiLine" />
+        </LinearLayout>
+
+        <HorizontalScrollView
+            android:layout_width="395dp"
+            android:layout_height="130dp"
+            android:layout_marginTop="8dp">
+
+            <LinearLayout
+                android:id="@+id/feedAddServiceLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/servicePhotoAddServiceImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@mipmap/ic_launcher_round"
+                    tools:srcCompat="@tools:sample/avatars" />
+            </LinearLayout>
+        </HorizontalScrollView>
+
+        <Button
+            style="@style/mainButtonOther"
+            android:id="@+id/addServiceAddServiceBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/addServices" />
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/footerAddServiceLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent" />
-
-    <HorizontalScrollView
-        android:layout_width="395dp"
-        android:layout_height="130dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/addServiceAddServiceBtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headerAddServiceLayout"
-        app:layout_constraintVertical_bias="0.977">
-
-        <LinearLayout
-            android:id="@+id/feedAddServiceLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/servicePhotoAddServiceImage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:srcCompat="@mipmap/ic_launcher_round"
-                tools:srcCompat="@tools:sample/avatars" />
-        </LinearLayout>
-    </HorizontalScrollView>
-
-    <Spinner
-        android:id="@+id/categoryAddServiceSpinner"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        android:entries="@array/category"
-        app:layout_constraintBottom_toTopOf="@+id/descriptionAddServiceInput"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headerAddServiceLayout"
-        app:layout_constraintVertical_bias="0.961" />
-
 </android.support.constraint.ConstraintLayout>
